@@ -7,21 +7,18 @@ package edu.harvard.iq.dataverse.export.dublincore;
 
 import edu.harvard.iq.dataverse.util.xml.XmlPrinter;
 import java.io.ByteArrayOutputStream;
-import java.io.File;
 import java.io.OutputStream;
 import java.io.StringReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.logging.Logger;
 import javax.json.Json;
 import javax.json.JsonObject;
 import javax.json.JsonReader;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import static org.junit.Assert.*;
+import org.junit.jupiter.api.Test;
+import org.xmlunit.assertj3.XmlAssert;
+
 
 /**
  *
@@ -30,58 +27,31 @@ import static org.junit.Assert.*;
 public class DublinCoreExportUtilTest {
 
     private static final Logger logger = Logger.getLogger(DublinCoreExportUtilTest.class.getCanonicalName());
-    
-    public DublinCoreExportUtilTest() {
-    }
-    
-    @BeforeClass
-    public static void setUpClass() {
-    }
-    
-    @AfterClass
-    public static void tearDownClass() {
-    }
-    
-    @Before
-    public void setUp() {
-    }
-    
-    @After
-    public void tearDown() {
-    }
 
     /**
      * Test of datasetJson2dublincore method, of class DublinCoreExportUtil.
      */
     @Test
     public void testDatasetJson2dublincore() throws Exception {
-
-        File datasetVersionJson = new File("src/test/java/edu/harvard/iq/dataverse/export/ddi/dataset-finch1.json");
-        String datasetVersionAsJson = new String(Files.readAllBytes(Paths.get(datasetVersionJson.getAbsolutePath())));
-       
+        // given
+        Path datasetVersionJson = Path.of("src/test/java/edu/harvard/iq/dataverse/export/ddi/dataset-finch1.json");
+        String datasetVersionAsJson = Files.readString(datasetVersionJson, StandardCharsets.UTF_8);
         JsonReader jsonReader = Json.createReader(new StringReader(datasetVersionAsJson));
         JsonObject obj = jsonReader.readObject();
         
-        File dubCoreFile = new File("src/test/java/edu/harvard/iq/dataverse/export/ddi/dataset-finchDC.xml");
-        String datasetAsDdi = XmlPrinter.prettyPrintXml(new String(Files.readAllBytes(Paths.get(dubCoreFile.getAbsolutePath()))));
-        logger.info(datasetAsDdi);
+        Path dubCoreFile = Path.of("src/test/java/edu/harvard/iq/dataverse/export/ddi/dataset-finchDC.xml");
+        String datasetAsDdi = XmlPrinter.prettyPrintXml(Files.readString(dubCoreFile, StandardCharsets.UTF_8));
+        logger.fine(datasetAsDdi);
         
         OutputStream output = new ByteArrayOutputStream();
+        
+        // when
         DublinCoreExportUtil.datasetJson2dublincore(obj, output, DublinCoreExportUtil.DC_FLAVOR_DCTERMS);
         String result = XmlPrinter.prettyPrintXml(output.toString());
         
-        logger.info(result);
-        assertEquals(datasetAsDdi, result);
-        
-        /*
-        System.out.println("datasetJson2dublincore");
-        JsonObject datasetDtoAsJson = null;
-        OutputStream expResult = null;
-        OutputStream result = DublinCoreExportUtil.datasetJson2dublincore(datasetDtoAsJson);
-        assertEquals(expResult, result);
-        // TODO review the generated test code and remove the default call to fail.
-        fail("The test case is a prototype.");
-*/
+        // then
+        logger.fine(result);
+        XmlAssert.assertThat(result).and(datasetAsDdi).ignoreWhitespace().areSimilar();
     }
     
 }
